objects/Batch_Definition__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blank Update</fullName>
                    <default>true</default>
                    <label>Blank Update</label>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Batch Definition</label>
    <pluralLabel>Batch Definitions</pluralLabel>
</CustomObject>